# MDI_PyMeta

./: CMakeLists.txt
MDI_PyMeta/: CMakeLists.txt  MDI_PyMeta.py
MDI_PyMeta/STUBS_MPI/: mpi.h
MDI_PyMeta/utils/: collectivevariable.py  distance.py  plot.py  utils.py
tests/grid/: plot.py  tcp.sh
tests/grid/data/: data.nacl  in.nacl
tests/lj_new/: plot.py  tcp.sh
tests/lj_new/data/: in.lj
tests/locations/: LAMMPS  MDI_PyMeta
tests/nacl2/: tcp.sh
tests/nacl2/data/: in.nacl
